--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -51,9 +51,19 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script src="dist/clipboard.min.js"></script>
 
+    {{!-- For Syntax Highlighting --}}
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
+
+    <script>hljs.initHighlightingOnLoad();</script>
+
+
 </head>
 
 <body>
+
+
+
 
 
     {{> navbar}}
