--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -10,6 +10,7 @@
   <div class="nav__link hide">
     <a class="item" href="/">Home</a>
     <a class="item" href="/addpost">Add Snippet</a>
+    <a class="item" href="/adddocs">Add Docs</a>
     <a class="item" href="/addcode">Add Code</a>
     <a class="item" href="/docs">Docs</a>
     <a class="item" href="/admin">Admin</a>
