--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -8,18 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="theme-color" content="#149fff">
     <meta name="google-site-verification" content="jJtw40VLTEcIFoV5cyyjsN1HbqU7fXXMlTJ39z9mm5o" />
-    <title>Studocu</title>
+    <title>Snippets.io</title>
     <!-- Search Engine -->
     <meta name="description" content="{{blogdisc}}">
-    <meta name="image" content="/images/logo.png">
+    {{!-- <meta name="image" content="/images/logo.png"> --}}
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="{{blogname}}">
     <meta itemprop="description" content="{{blogdisc}}">
-    <meta itemprop="image" content="/images/logo.png">
+    {{!-- <meta itemprop="image" content="/images/logo.png"> --}}
     <!-- Open Graph general (Facebook, Pinterest & LinkedIn) -->
     <meta property="og:title" content="{{blogname}}">
     <meta property="og:description" content="{{blogdisc}}">
-    <meta property="og:image" content="/images/logo.png">
+    {{!-- <meta property="og:image" content="/images/logo.png"> --}}
     <meta property="og:url" content="">
     <meta property="og:site_name" content="Studocu">
     <meta property="og:locale" content="en_US">
@@ -28,16 +28,16 @@
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="{{blogname}}">
     <meta property="twitter:description" content="{{blogdisc}}">
-    <meta property="twitter:image:src" content="/images/logo.png">
+    {{!-- <meta property="twitter:image:src" content="/images/logo.png"> --}}
 
     <link rel="stylesheet" href="/src/master.css">
     <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-icon" href="/images/logo.png">
+    {{!-- <link rel="apple-touch-icon" href="/images/logo.png"> --}}
     <script src="/src/index.js"></script>
 
     <!-- Search Engine -->
     <meta name="description" content="{{blogname}}">
-    <meta name="image" content="/images/logo.png">
+    {{!-- <meta name="image" content="/images/logo.png"> --}}
     {{!-- adsbygoogle --}}
     <script data-ad-client="ca-pub-1044322610224848" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -45,7 +45,7 @@
         referrerpolicy="origin"></script>
     <!-- Bootstrap CSS -->
 
-    <link rel="icon" type="png" href="/images\logo.png">
+    {{!-- <link rel="icon" type="png" href="/images\logo.png"> --}}
     <link rel="stylesheet" href="/stylesheets/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
