--- a/views/forms/adddocs.hbs
+++ b/views/forms/adddocs.hbs
@@ -84,25 +84,30 @@
                 {{#each codedata}}
                 <div
                     class="searchitem mb-8 block p-6 bg-grey-100 rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                        {{this.name}}</h5>
-                    <p class="font-normal text-gray-700 dark:text-gray-400">{{this.desc}}</p>
+                    <div class="flex">
+
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                            {{this.name}}</h5>
+                            
+                        <button onclick=CopyToClipboard("{{this._id}}")
+                            class="ml-8  rounded inline-flex group items-center justify-center px-2 py-1 cursor-pointer border-b-4 border-l-2 active:border-purple-600 active:shadow-none shadow-lg bg-gradient-to-tr from-purple-600 to-purple-500 border-purple-700 text-white">
+
+                            <span class="w-0 h-0 transition-all duration-300 ease-out bg-white rounded-full"></span>
+                            <span class="">Copy</span>
+
+                        </button>
+                    </div>
+                    <p class="mt-3 font-normal text-gray-700 dark:text-gray-400">{{this.desc}}</p>
 
                     <textarea id="{{this._id}}"
                         class="w-0 h-0 font-normal text-gray-700 dark:text-gray-400">{{this.code}}</textarea>
 
-                    <button onclick=CopyToClipboard("{{this._id}}")
-                        class=" m-3 rounded inline-flex group items-center justify-center px-2 py-1 cursor-pointer border-b-4 border-l-2 active:border-purple-600 active:shadow-none shadow-lg bg-gradient-to-tr from-purple-600 to-purple-500 border-purple-700 text-white">
-
-                        <span class="w-0 h-0 transition-all duration-300 ease-out bg-white rounded-full"></span>
-                        <span class="">Copy</span>
-
-                    </button>
 
                     <div class="my-3  p-4 rounded-md resize-none text-gray-800 bg-gray-50" id="{{this.name}}"></div>
 
                     {{!-- <textarea id="{{this._id}}" rows="10" id="code" name="code" placeholder="Paste Code..."
-                        class="my-3 p-4 rounded-md resize-none text-gray-800 bg-gray-50" hidden>{{this.code}}</textarea> --}}
+                        class="my-3 p-4 rounded-md resize-none text-gray-800 bg-gray-50" hidden>{{this.code}}</textarea>
+                    --}}
                     </a>
 
                 </div>
