--- a/views/forms/editpost.hbs
+++ b/views/forms/editpost.hbs
@@ -6,8 +6,8 @@
 
 			<label for="name" class="block text-gray-600">Function</label>
 			<input type="text" name="id" value={{data._id}} hidden>
-			<input type="text" name="name" id="name" placeholder="Name" value={{data.name}}
-				class="my-5 w-full px-4 py-3 rounded-md border-gray-300 bg-gray-50 text-gray-800 focus:border-violet-600">
+			<input type="text" name="name" id="name" placeholder="Name" value="{{data.name}}"
+				class="my-5 w-full px-4 py-3 rounded-md border-gray-300 bg-gray-50 ">
 
 			<label for="description" class="block text-gray-600">Description</label>
 			<textarea rows="8" id="description" name="desc" placeholder="Description..."
