--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -27,6 +27,7 @@
 
   body {
     font-family: sans-serif;
+    padding-top: 60px;
   }
 
   .item {
@@ -46,6 +47,12 @@
     align-items: center;
     padding-top: 20px;
     z-index:1000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 60px;
+    background-color: #fff;
   }
 
   .logo {
