--- a/views/partials/searchbar.hbs
+++ b/views/partials/searchbar.hbs
@@ -21,14 +21,18 @@ function myFunction() {
   li = ul.getElementsByClassName('searchitem');
 
   // Loop through all list items, and hide those who don't match the search query
+ 
   for (i = 0; i < li.length; i++) {
-    a = li[i].getElementsByTagName("h5")[0];
+    a = li[i].getElementsByTagName("p")[0];
+    b = li[i].getElementsByTagName("h5")[0];
     txtValue = a.textContent || a.innerText;
-    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+    txtValue1 = b.textContent || b.innerText;
+    if (txtValue.toUpperCase().indexOf(filter) > -1 || txtValue1.toUpperCase().indexOf(filter) > -1) {
       li[i].style.display = "";
     } else {
       li[i].style.display = "none";
     }
   }
+
 }
 </script>
