--- a/views/pages/snippet.hbs
+++ b/views/pages/snippet.hbs
@@ -59,7 +59,9 @@
                         <span class="">Copy</span>
                     </a>
                 </div>
-                <p id="frontend" class="mt-4 font-normal text-gray-700 dark:text-gray-400">{{data.frontend}}</p>
+                <pre>
+                <cose id="frontend" class="mt-4 font-normal text-gray-700 dark:text-gray-400">{{data.frontend}}</cose>
+                </pre>
             </div>
         </div>
     </div>
@@ -76,7 +78,10 @@
                         <span class="">Copy</span>
                     </a>
                 </div>
-                <p id="backend" class="mt-4 font-normal text-gray-700 dark:text-gray-400">{{data.backend}}</p>
+                <pre>
+
+                <code id="backend" class="mt-4 font-normal text-gray-700 dark:text-gray-400">{{data.backend}}</code>
+                </pre>
             </div>
         </div>
     </div>
@@ -93,7 +98,10 @@
                         <span class="">Copy</span>
                     </a>
                 </div>
-                <p id="schema" class="mt-4 font-normal text-gray-700 dark:text-gray-400">{{data.schema}}</p>
+                <pre>
+
+                <code id="schema" class="mt-4 font-normal text-gray-700 dark:text-gray-400">{{data.schema}}</code>
+                </pre>
             </div>
         </div>
     </div>
@@ -110,7 +118,10 @@
                         <span class="">Copy</span>
                     </a>
                 </div>
-                <p id="linking" class="mt-4 font-normal text-gray-700 dark:text-gray-400">{{data.linking}}</p>
+                <pre>
+
+                <code id="linking" class="mt-4 font-normal text-gray-700 dark:text-gray-400">{{data.linking}}</code>
+                </pre>
             </div>
         </div>
     </div>
