--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -45,13 +45,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 20px;
+    padding-top: 10px;
     z-index:1000;
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
-    height: 60px;
+    height: 50px;
+    padding-bottom: 10px;
     background-color: #fff;
   }
 
