--- a/views/forms/editcode.hbs
+++ b/views/forms/editcode.hbs
@@ -19,7 +19,7 @@
 
 
 			<label class="block text-gray-900 font-bold">Preview</label>
-			<div class="my-3 p-4 rounded-md resize-none text-gray-800 bg-gray-50 flex items-center justify-center" id="prevCom"></div>
+			<div style="pointer-events:none" class="my-3 p-4 rounded-md resize-none text-gray-800 bg-gray-50 flex items-center justify-center" id="prevCom"></div>
 
 			<button type="submit" class="py-4 my-8 font-semibold rounded-md text-gray-50 bg-violet-600">Edit
 				Code</button>
