--- a/views/pages/doc.hbs
+++ b/views/pages/doc.hbs
@@ -1,6 +1,6 @@
 <div class="center">
 
-<div id="prevCom"></div>
+<div style="pointer-events:none" id="prevCom"></div>
 
 <textarea id="WPComment" hidden>{{data.code}}</textarea>
 </div>
