--- a/views/forms/adddocs.hbs
+++ b/views/forms/adddocs.hbs
@@ -34,7 +34,7 @@
                     class="my-3 p-4 rounded-md resize-none text-gray-800 bg-gray-50"></textarea>
 
                 <label class="block text-gray-900 font-bold">Preview</label>
-                <div id="prevCom"></div>
+                <div style="pointer-events:none" id="prevCom"></div>
 
                 <button type="submit" class="py-4 my-8 font-semibold rounded-md text-gray-50 bg-violet-600">Add
                     Post</button>
