--- a/views/pages/code.hbs
+++ b/views/pages/code.hbs
@@ -66,7 +66,7 @@
 
 
                 <label class="mt-5 block text-gray-900 font-bold ">Preview</label>
-                <div class="my-3  p-4 rounded-md resize-none text-gray-800 bg-gray-50" id="prevCom"></div>
+                <div style="pointer-events:none" class="my-3  p-4 rounded-md resize-none text-gray-800 bg-gray-50" id="prevCom"></div>
 
                 <textarea id="WPComment" rows="10" id="code" name="code" placeholder="Paste Code..."
                     class="my-3 p-4 rounded-md resize-none text-gray-800 bg-gray-50" hidden>{{data.code}}</textarea>
